update index and readme

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>É o adivinhas</title>
+  <title>O Perguntas</title>
 
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -16,7 +16,7 @@
       src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg"
       alt="Bola de Cristal">
 
-    <h1>Vou relevar seu destino!</h1>
+    <h1>O Perguntas</h1>
     <p>
       Clique em <span>fazer pergunta</span> para que seu destino seja revelado.
     </p>
