adição de verificação de resposta, implementação de timer por resposta

--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
       Clique em <span>fazer pergunta</span> para que seu destino seja revelado.
     </p>
 
-    <input type="text" placeholder="Digite sua pergunta">
-    <button>Fazer pergunta</button>
+    <input id="inputResposta" type="text" placeholder="Digite sua pergunta">
+    <button id="buttonPerguntar" onclick="fazerPergunta()">Fazer pergunta</button>
+
+    <h3 id="resposta"></h3>
   </section>
+
+  <script src="./index.js"></script>
 </body>
 
 </html>
